--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
-.App {
+.mainDiv {
   text-align: center;
+  background-color: gray;
+  height: 100vh;
+  width: 100vw;
 }
 .dieSize{
   height: 40px;
   width: 40px;
   border: 1px solid black;
   border-radius: 5px;
-  margin: 5px;
- 
+  margin: 5px; 
+  background-color: white;  
+}
+.diceContainer {
+  position: fixed;
+
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  width: 35%;
+  background-color: lightblue;
+  justify-content: space-around;
   
+  
+  
+
+}
+.scorecard{
+  position: fixed;
+  right: 0px;
+  width: 40%;
+  background-color: azure;
+  border: 1px solid black;
+}
+td {
+  border: 1px solid gray;
 }
