--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   min-width: 400px;
   margin-left: auto;
   margin-right: auto;
-  background-color: lightblue;
+  background-color: rgb(0, 47, 92);
   justify-content: space-around;
   
 }
@@ -40,8 +40,10 @@ td {
   border: 1px solid gray;
 }
 
-.newGame {
 
-  margin-right: 0px;
-
+.lock {
+  height: 25px;
+  width: 25px;
+  bottom: -5px;
+  right: -5px;
 }
