--- a/src/App.css
+++ b/src/App.css
@@ -44,15 +44,23 @@ font-size: 1.25em;
   min-width: 320px;
   margin-left: auto;
   margin-right: auto;
-  background-color: azure;
+  background-color: white;
 }
 table{
   width: 99%;
   margin: auto;
+  border-collapse: collapse;
+}
+
+tr:nth-of-type(odd){
+  background-color: white;
+}
+tr:nth-of-type(even){
+  background-color: rgb(181, 200, 255);
 }
 td {
   border: 1px solid gray;
-  border-radius: 5px;
+  /* border-radius: 5px; */
 }
 .scoreColumn{
   width: 35px;
@@ -69,30 +77,53 @@ td {
   font-size: 1.1em;
   font-weight: 700;
 }
+
+th{
+  color: white;
+  background-color: rgb(0, 47, 92);
+  margin-bottom: 15px;
+  padding: 5px;
+
+}
+.highScoresTr{
+  background-color: rgb(0, 47, 92) ;
+}
+
 .name{
   text-align: center;
   padding: 2px;
   height: 1.2em;
+  border: 0px ;
+  border-radius: 0px;
+  margin: 0px;
+
 }
 .score{
+  border: 0px ;
+  
   font-weight: 600; 
   text-align: center;
   padding: 2px;
   height: 1.2em;
-
+  border-radius: 0px;
+  margin: 0px;
 }
 .taunt{
+  border: 0px ;
   font-style: oblique;
   text-align: center;
   padding: 2px;
   height: 1.2em;
-
+  border-radius: 0px;
+  margin: 0px;
 }
+
 form {
   border-radius: 5px;
   text-align: center;
   width: 100;
   margin: auto;
+  color: white;
 }
 form div{
   width: 100%;
@@ -105,6 +136,7 @@ form div input{
   padding: 4px;
   text-align: center;
   margin: 4px;
+  background-color: rgb(250, 250, 250);
 }
 form div textarea{
   border-radius: 5px;
@@ -113,6 +145,13 @@ form div textarea{
   text-align: center;
   height: 3em;
   margin: 4px;
+  background-color: rgb(250, 250, 250);
+
+}
+.closeModalBtn{
+  position: fixed;
+  right: 3px;
+  top: 3px;
 }
 @media (max-width: 480px) { 
   .mainDiv {
