--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,9 @@
   background-color: gray;
   padding-top: 5%;
   padding-bottom: 5%;
-  height: 100%;
+  height: 100vh;
   width: 100vw;
+  margin: 0px;
 }
 .dieSize{
   height: 45px;
@@ -16,13 +17,22 @@
 
 }
 .btnRollDice{
-text-align: center;
 width: 70px;
 height: 60px;
-border-radius: 3px;
-background-color: rgb(180, 180, 180);
 font-size: 1.25em;
-cursor: pointer;
+background-color: rgb(180, 180, 180);
+color: rgb(0, 47, 92);
+}
+
+button{
+  text-align: center;
+  border-radius: 3px;
+  background-color: rgb(0, 47, 92);
+  color: white;
+  cursor: pointer;
+  margin: 0px 3px;
+  box-shadow: 3px 3px 3px black;
+  font-weight: 600;
 }
 .diceContainer {
   width: 500px;
@@ -151,8 +161,10 @@ form div textarea{
 }
 .closeModalBtn{
   position: fixed;
-  right: 3px;
-  top: 3px;
+  right: 6px;
+  top: 9px;
+  background-color: rgb(180, 180, 180);
+  color: rgb(0, 47, 92);
 }
 @media (max-width: 480px) { 
   .mainDiv {
