--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,6 @@ font-size: 1.25em;
 background-color: rgb(180, 180, 180);
 color: rgb(0, 47, 92);
 }
-
 button{
   text-align: center;
   border-radius: 5px;
@@ -33,6 +32,27 @@ button{
   margin: 0px 3px;
   box-shadow: 3px 3px 3px black;
   font-weight: 600;
+  line-height: 1em;
+  font-size: 1em;
+}
+p,h2,h3,label{
+  padding:7px;
+}
+h1{
+  text-align: center;
+  padding: 7px;
+}
+
+.closeModalBtn{
+  position: fixed;
+  right: 6px;
+  top: 9px;
+  background-color: rgb(180, 180, 180);
+  color: rgb(0, 47, 92);
+  height: 25px;
+  width: 25px;
+  padding: 0px;
+  font-weight: 500
 }
 .diceContainer {
   width: 500px;
@@ -89,6 +109,10 @@ button{
   box-shadow: 3px 3px 3px black;
   cursor: pointer;
 }
+.noHighlight{
+  border-radius: 0px;
+  cursor: pointer;
+}
 table{
   width: 99%;
   margin: auto;
@@ -110,6 +134,9 @@ td {
 }
 .cursorSelect{
   cursor: pointer;
+}
+.cursorHelp{
+  cursor: help;
 }
 .lock {
   height: 30px;
@@ -144,7 +171,6 @@ th{
 }
 .score{
   border: 0px ;
-  
   font-weight: 600; 
   text-align: center;
   padding: 2px;
@@ -192,12 +218,12 @@ form div textarea{
   background-color: rgb(250, 250, 250);
 
 }
-.closeModalBtn{
-  position: fixed;
-  right: 6px;
-  top: 9px;
-  background-color: rgb(180, 180, 180);
-  color: rgb(0, 47, 92);
+.rules{
+  background-color: rgb(250, 250, 250);
+  width: 400px;
+  margin: auto;
+  color:  rgb(0, 47, 92);
+  padding: 1px;
 }
 @media (max-width: 480px) { 
   .mainDiv {
@@ -212,6 +238,14 @@ form div textarea{
     height: 40px;
     font-size: 1em; 
     text-align: center;
+  }
+  button{
+    width: 30%;
+    text-align: center;
+    padding: 2px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+
   }
   .scorecard{
     width: 100%;
@@ -233,6 +267,9 @@ form div textarea{
   }
   td {
     height: 35px;
+  }
+  .rules{
+    width: 275px;
   }
 
  }
