--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ font-size: 1.25em;
 background-color: rgb(180, 180, 180);
 color: rgb(0, 47, 92);
 }
-button{
+button, [type=submit]{
   text-align: center;
   border-radius: 5px;
   background-color: rgb(0, 47, 92);
@@ -202,20 +202,26 @@ form div{
 form div input{
   border-radius: 5px;
   width: 85%;
-  height: 1.3em;
+  /* height: 1em; */
   padding: 4px;
   text-align: center;
   margin: 4px;
   background-color: rgb(250, 250, 250);
+  font-size: 1.25em;
+  line-height: 1em;
+
 }
 form div textarea{
   border-radius: 5px;
   width: 85%;
   padding: 4px;
   text-align: center;
-  height: 3em;
+  height: 5em;
   margin: 4px;
   background-color: rgb(250, 250, 250);
+  font-size: 1.2em;
+  line-height: 1em;
+  font-style: oblique;
 
 }
 .rules{
