--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,81 @@
   /* margin: 5px;  */
   background-color: rgb(245, 245, 245); 
   font-size: 2em;
+}
+.pip{
+  display: block;
+  width: 11px;
+  height: 11px;
+  border-radius: 50%;
+  margin: 2px;  
+  background-color:black;
 
+}
+.die1{
+  height: 100%;
+  width:  100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.die2{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.die2 .pip:nth-of-type(2) {
+  align-self: flex-end;
+}
+.die3{
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.die3 .pip:nth-of-type(2){
+  align-self: center;
+}
+.die3 .pip:nth-of-type(3){
+  align-self: flex-end;
+}
+.die4 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.die4 .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.die5 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.die5 .column:nth-of-type(2){
+  align-self: center;
+  justify-content: center;
+}
+.die5 .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.die6 {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.die6 .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .diceContainer {
   width: 500px;
@@ -66,6 +140,7 @@ button, [type=submit]{
   font-weight: 600;
   line-height: 1em;
   font-size: 1em;
+  padding: 2px;
 }
 p,h2,h3,label{
   padding:7px;
@@ -283,12 +358,19 @@ form div textarea{
 @media ( max-width: 800px) and (min-width: 481px) {
   .mainDiv {
     padding-top: 0px;
+    padding-bottom: 0px;
   }
 
   .diceContainer {
     width: 100%;
     height: 140px;
     border-radius: 0px;
+  }
+  .pip{
+    width: 13px;
+    height: 13px;
+    margin: 3px;  
+
   }
   .dieSize{
     height: 60px;
@@ -324,16 +406,17 @@ form div textarea{
 
   button{
     width: 30%;
-    height: 1.7em;
+    height: 50px;
     text-align: center;
     padding: 2px;
     margin-top: 4px;
     margin-bottom: 4px;
-
+    line-height: 1em;
+    font-size: .9em;
   } 
 
   td {
-    height: 38px;
+    height: 35px;
   }
   .rules{
     width: 90%;
@@ -372,6 +455,12 @@ form div textarea{
   .diceContainer {
   width: 100%;
   border-radius: 0px;
+  }
+  .pip{
+    
+    width: 9px;
+    height: 9px;
+    margin: 1px;    
   }
   .btnRollDice{
     width: 50px;
